[gd_scene load_steps=17 format=2]

[ext_resource path="res://Title/Title.gd" type="Script" id=1]
[ext_resource path="res://Tiles/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Title/titlescreen1.png" type="Texture" id=3]
[ext_resource path="res://Title/titlescreen2.png" type="Texture" id=4]
[ext_resource path="res://Enemies/enemy1.png" type="Texture" id=5]
[ext_resource path="res://Player/snail hero.png" type="Texture" id=6]
[ext_resource path="res://Enemies/enemy2-1.png" type="Texture" id=7]
[ext_resource path="res://Enemies/meatball.png" type="Texture" id=8]
[ext_resource path="res://Title/credits.png" type="Texture" id=9]
[ext_resource path="res://black.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Chef1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=1]
resource_name = "move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" parent="." instance=ExtResource( 2 )]
position = Vector2( -40, 40 )
tile_data = PoolIntArray( -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 46.5, 34.5 )
amount = 2
lifetime = 3.0
randomness = 1.0
initial_velocity = 0.0
color = Color( 0.305882, 0.564706, 0.458824, 1 )

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
position = Vector2( 48.5, 24.5 )
amount = 4
lifetime = 3.0
randomness = 1.0
initial_velocity = 0.0
color = Color( 0.305882, 0.564706, 0.458824, 1 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2( 23.5, 32.5 )
amount = 2
lifetime = 3.0
randomness = 1.0
initial_velocity = 0.0
color = Color( 0.305882, 0.564706, 0.458824, 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 35.5, 33.5 )
amount = 4
lifetime = 3.0
randomness = 1.0
initial_velocity = 0.0
color = Color( 0.305882, 0.564706, 0.458824, 1 )

[node name="Sprite1" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="Chef1Anim" type="AnimationPlayer" parent="."]
anims/move = SubResource( 2 )

[node name="Chef1" type="Sprite" parent="."]
position = Vector2( 10, 43 )
texture = ExtResource( 5 )
hframes = 14
frame = 1

[node name="SnailPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Snail")
anims/move = SubResource( 1 )

[node name="Snail" type="Sprite" parent="."]
position = Vector2( 54, 44 )
texture = ExtResource( 6 )
hframes = 18
frame = 7

[node name="chef2Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Chef2Anim")
anims/move = SubResource( 3 )

[node name="Chef2Anim" type="Sprite" parent="."]
position = Vector2( 22, 43 )
texture = ExtResource( 7 )
hframes = 14
frame = 3

[node name="meatballAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../meatballsprite")
anims/move = SubResource( 4 )

[node name="meatballsprite" type="Sprite" parent="."]
position = Vector2( 37, 45 )
texture = ExtResource( 8 )
hframes = 10
frame = 5

[node name="Clemonades" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )
centered = false

[node name="Transition" type="Sprite" parent="."]
texture = ExtResource( 10 )
centered = false

[node name="TransAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../Transition")
"anims/fade in" = SubResource( 6 )
"anims/fade out" = SubResource( 5 )

[node name="AnyKeyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ClemTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
